--- a/src/main.sass
+++ b/src/main.sass
@@ -1,13 +1,42 @@
-$plt1: pink
+$plt1: "pink"
+
+@import url('https://fonts.googleapis.com/css2?family=Tourney:wght@900&display=swap')
 
 body
   width: 100%
   margin: 0
   padding: 0
+  min-height: 100vh
+  overflow: hidden
+
+#root  
+  min-height: 100vh
 
 .framebuffer
   width: 100%
   background-color: $plt1
   overflow: auto
   position: relative
+  min-height: 100vh
 
+.login-btn
+  width: 120px
+  margin: 10px
+  text-align: center
+  cursor: pointer
+  z-index: 1
+
+.icon
+  width: 24px
+  height: 24px
+
+.wrapper
+  width: 90%
+  margin: 5px 5%
+  z-index: -1
+
+.wrapper > img
+  z-index: -1
+
+.login-title
+  font-family: 'Tourney', cursive
